<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="after_turn_on">After</string>
    <string name="application_manage">Smart Dark Mode</string>
    <string name="auto_screen_temperature">Color Temp</string>
    <string name="before_turn_on">Before</string>
    <string name="change_darkmode_loading_hint">Switching to Dark Mode...</string>
    <string name="change_normalmode_loading_hint">Switching to Light Mode...</string>
    <string name="change_third_app_to_darkmode">Set third-party apps to Dark Mode.</string>
    <string name="close_all">Turn Off All</string>
    <string name="color_allow_text">OK</string>
    <string name="color_day" />
    <string name="color_hour">hours</string>
    <string name="color_install_download_progress_textview">Download</string>
    <string name="color_internet_label_apostrophe">...</string>
    <string name="color_keyboard_view_access_close_button">Collapse keyboard</string>
    <string name="color_keyboard_view_access_detail_button">Switch to regular keyboard</string>
    <string name="color_keyboard_view_keycode_low_shift">Switch to lowercase</string>
    <string name="color_keyboard_view_top_text">OPPO Secure Keyboard</string>
    <string name="color_keyboardview_keycode_letters">Switch to alphabets</string>
    <string name="color_keyboardview_keycode_number">Switch Number</string>
    <string name="color_keyboardview_keycode_shift">Switch to uppercase</string>
    <string name="color_keyboardview_keycode_symbol">Switch to symbols</string>
    <string name="color_loading_view_access_string">Loading</string>
    <string name="color_minute">min</string>
    <string name="color_month" />
    <string name="color_number_keyboard_delete">Delete</string>
    <string name="color_numeric_keyboard_sure">Done</string>
    <string name="color_password_keyboard_label_symbol_ok">OK</string>
    <string name="color_reject_text">Exit</string>
    <string name="color_search_view_cancel">@string/color_search_view_text</string>
    <string name="color_search_view_text">Cancel</string>
    <string name="color_security_alertdailog_privacy">Privacy Policy</string>
    <string name="color_security_alertdailog_statement">Tap and view %1$s for more information.</string>
    <string name="color_security_alertdialog_checkbox_msg">"Don't Ask Again"</string>
    <string name="color_simple_lock_access_description">Passcode field, x out of y values have been entered</string>
    <string name="color_slide_delete">Delete</string>
    <string name="color_support_value">true</string>
    <string name="color_time_picker_day" />
    <string name="color_time_picker_today">Today</string>
    <string name="color_year" />
    <string name="copy">Copy</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="darkmode_enable_from_sunset_to_sunrise">From Sunset to Sunrise</string>
    <string name="darkmode_notification_channel_description">Scheduled Dark Mode</string>
    <string name="darkmode_screen_off_effect">Turn screen on again to activate</string>
    <string name="darkmode_use_hint">Dark Mode reduces power consumption to extend battery life.</string>
    <string name="darkmode_wait_switch_notification_dark_content">Dark mode will activate the next time you turn on your screen. Or, tap here to switch now.</string>
    <string name="darkmode_wait_switch_notification_light_content">Light mode will activate the next time you turn on your screen. Or, you can tap here to switch now.</string>
    <string name="enable_immediately">Dark Mode</string>
    <string name="enabled_all">Turn On All</string>
    <string name="enabled_all_third_app">Turn On Dark Mode for All Third-Party Apps</string>
    <string name="enabled_thied_app_hint">This is currently a beta feature. Turn off the mode in case of any display issues.</string>
    <string name="enabled_third_app">Turn On Dark Mode for Third-Party Apps</string>
    <string name="end">End</string>
    <string name="expand_button_title">Advanced</string>
    <string name="eyeprotect_enable_immediately">Eye Care</string>
    <string name="eyeprotect_normal">Color</string>
    <string name="fixed_time_open">Schedule Time</string>
    <string name="fragment_is_loading">Loading...</string>
    <string name="go_to_settings">Scheduled Time</string>
    <string name="grayscale_summary">Further reduces the intensity of bright colors.</string>
    <string name="ime_action_done">Done</string>
    <string name="keyboardview_keycode_alt">Alt</string>
    <string name="keyboardview_keycode_cancel">Cancel</string>
    <string name="keyboardview_keycode_delete">Delete</string>
    <string name="keyboardview_keycode_done">Done</string>
    <string name="keyboardview_keycode_enter">Enter</string>
    <string name="keyboardview_keycode_mode_change">Change Mode</string>
    <string name="keyboardview_keycode_shift">Shift</string>
    <string name="lockscreen_access_pattern_area">Pattern area.</string>
    <string name="lockscreen_access_pattern_cell_added_verbose">Cell %1$s added</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="more_time_download"> k</string>
    <string name="most_time_download"> m</string>
    <string name="normal_summary">Protects your eyes while retaining the original colors.</string>
    <string name="not_set">Not set</string>
    <string name="oppo_lunar_leap_string">闰</string>
    <string name="oppo_touchsearch_dot">•</string>
    <string name="password_keyboard_label_alpha_key">ABC</string>
    <string name="picker_talkback_tip">Selector item Use two fingers to slide up and down to select</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="preference_key_application_manage">preference_key_application_manage</string>
    <string name="preference_key_application_manage_divider">preference_key_application_manage_divider</string>
    <string name="preference_key_darkmode_use_hint">preference_key_darkmode_use_hint</string>
    <string name="preference_key_enable_immediately_switch">preference_key_enable_immediately_switch</string>
    <string name="preference_key_set_time_category">preference_key_set_time_category</string>
    <string name="preference_key_set_time_picker">preference_key_set_time_picker</string>
    <string name="preference_key_set_time_switch">preference_key_set_time_switch</string>
    <string name="preference_key_sunset_to_sunrise_switch">preference_key_sunset_to_sunrise_switch</string>
    <string name="protect_eye_category">DISPLAY EFFECTS</string>
    <string name="protect_eye_mode_introducation">Eye Care reduces blue light from the screen and prevents eye strain.</string>
    <string name="protect_eyes_mode">Eye Care</string>
    <string name="reduce_saturation">Black and White</string>
    <string name="relative_cold">Cool</string>
    <string name="relative_warm">Warm</string>
    <string name="screen_color_temperature_title">SCREEN COLOR TEMPERATURE</string>
    <string name="search_menu_title">Search</string>
    <string name="second_activity_behavior">com.color.darkmode.ui.widget.SecondToolbarBehavior</string>
    <string name="set_time">Schedule Time</string>
    <string name="start">Start</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
    <string name="support_abc_searchview_description_clear">Clear query</string>
    <string name="support_abc_searchview_description_search">Search</string>
    <string name="support_abc_searchview_description_submit">Submit query</string>
    <string name="support_abc_searchview_description_voice">Voice search</string>
    <string name="support_abc_toolbar_collapse_description">Collapse</string>
    <string name="third_app">Dark Mode for Third-Party Apps (Beta)</string>
    <string name="third_app_turn_on_hint">Turn on the switch to set an app to Dark Mode. If an app has its own dark mode, you can turn its switch off.</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="turn_on_hint">Turn on the switch to set an app to Dark Mode. If an app has its own dark mode, you can turn its switch off.</string>
    <string name="use_dialog_negative_button_text">Cancel</string>
    <string name="use_dialog_positive_button_text">Turn On</string>
    <string name="use_dialog_positive_check_text">"Don't ask again"</string>
    <string name="use_dialog_positive_message">If turned on, the current theme will be changed. Turn it on?</string>
    <string name="use_dialog_positive_title">Turn On Dark Mode</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="ymdw">yyyy年M月d日 EEEE</string>
    <string name="ymdwhm">yyyy年M月d日 EEEE HH:mm</string>
    <string name="ymdwshm">yyyy年M月d日 EEE HH:mm</string>
</resources>
